--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,16 @@
     "sourceType": "module"
   },
   "plugins": ["react"],
-  "rules": {},
+  "rules": {
+    "react/react-in-jsx-scope": 0,
+    "sort-keys": "error",
+    "sort-imports": [
+      "error",
+      {
+        "memberSyntaxSortOrder": ["none", "all", "multiple", "single"]
+      }
+    ]
+  },
   "settings": {
     "react": {
       "version": "detect"
