--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,8 @@
     "es2021": true
   },
   "extends": [
-    "plugin:react/recommended",
     "standard",
+    "plugin:react/recommended",
     "plugin:prettier/recommended"
   ],
   "globals": {
@@ -23,10 +23,39 @@
   "rules": {
     "react/react-in-jsx-scope": 0,
     "sort-keys": "error",
-    "sort-imports": [
+    "import/order": [
       "error",
       {
-        "memberSyntaxSortOrder": ["none", "all", "multiple", "single"]
+        "groups": [
+          "builtin",
+          "external",
+          ["parent", "internal", "sibling"],
+          "index",
+          "object"
+        ],
+        "pathGroups": [
+          {
+            "pattern": "react*",
+            "group": "external",
+            "position": "before"
+          },
+          {
+            "pattern": "redux*",
+            "group": "external",
+            "position": "before"
+          },
+          {
+            "pattern": "gatsby*",
+            "group": "external",
+            "position": "before"
+          }
+        ],
+        "pathGroupsExcludedImportTypes": ["react*", "redux*", "gatsby*"],
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
       }
     ]
   },
